# Isochronic-tone-editor-and-generator

./: .gitignore  .pre-commit-config.yaml  ADR-0001.md  CHANGELOG.md  Dockerfile  README.md  build.gradle  docker-compose.yml  package-lock.json  package.json  settings.gradle
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
SINE/: build.gradle
SINE-Editor/: build.gradle
SINE-Editor/editor_manual/: preset.html  preset_it_IT.html
_SETUP/: README.txt
_SETUP/Debian, Ubuntu (dpkg)/: README.txt
_SETUP/Mac/: README.md
_SETUP/Windows/: __README.txt
auth/: build.gradle
backend/: alembic.ini  pyproject.toml
backend/app/: deps.py  main.py  models.py  schemas.py
backend/app/repositories/: tone.py
backend/app/routes/: tone.py
backend/app/services/: tone.py
backend/core/: config.py
backend/db/: session.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_create_tones.py
collab/: ot.js
discovery/: summary.md
docs/: README.md  best_practices.md  sine-session-format.md
editor/public/: collab.html
frontend/: .eslintrc.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/ui/: tone-table.tsx
frontend/lib/: api.ts
frontend/public/: README.txt
frontend/styles/: globals.css
frontend/tests/: tone-table.test.tsx
scripts/: bootstrap.sh  ingest.py
server/: signaling-server.js
tests/: collab.e2e.test.js
tests/backend/: test_tone.py
tests/frontend/: tone-table.test.tsx
(+50 files in other folders)
